--- a/Prácticas/Soluciones/Práctica1/ej1.tex
+++ b/Prácticas/Soluciones/Práctica1/ej1.tex
@@ -1,3 +1,5 @@
 \section*{Ejercicio 1}
 
-Pendiente
+Para construir una constante $k$, aplicamos la función $s$ (sucesor) unas $k$ veces, partiendo inicialmente de la función $n$ que nos devuelve el $0$.
+
+$f(x) = k = (\underbrace{s \circ \dots \circ s}_{\text{$k$ veces}} \circ \; n)(x) = s^k(n(x))$
