Arregla rendering del underbrace

--- a/Template.tex
+++ b/Template.tex
@@ -3,8 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel} % Agregar es-nodecimaldot si hay problemas con el separador de decimales y de miles
 % \usepackage{noto-mono} % Tipografía "Noto Sans Mono" para monospace
-\usepackage{amsmath, amsbsy, amssymb, mathabx} % Agregar cuando se necesiten: amscd, amssymb, amsthm, latexsym
-\usepackage{mathtools}
+\usepackage{mathtools, amsmath, amsbsy, amssymb, mathabx} % Agregar cuando se necesiten: amscd, amssymb, amsthm, latexsym
 \usepackage{enumerate}
 \usepackage{graphicx}
 \usepackage{multicol}
