--- a/Prácticas/Soluciones/Práctica1/ej2.tex
+++ b/Prácticas/Soluciones/Práctica1/ej2.tex
@@ -62,7 +62,7 @@
 
     $g_3(x, y) = suma(resta(x, y), y) = (x \dotdiv y) + y$
 
-    Si $x \geq y$, entonces $g_3$ simplemente resta y suma $y$ a un $x$ que es más grande, y en efecto terminamos con $x$ que era el máximo. Si es el otro caso, $x < y$, al hacer la resta en $\mathbb{N}: x \dotdiv y = 0$, y luego al sumar $y$ obtenemos $y$ que era el máximo.
+    Si $x \geq y$, entonces $g_3$ simplemente resta y suma $y$ a un $x$ que es más grande, y en efecto terminamos con $x$ que era el máximo. En el otro caso $x < y$, al hacer la resta en $\N$ obtenemos $x \dotdiv y = 0$, luego al sumar $y$ obtenemos nuevamente $y$ que era el máximo.
 
     \item
     $g_4(x, y) = \text{min}\{x, y\}$
