--- a/Template.tex
+++ b/Template.tex
@@ -80,3 +80,6 @@
 % Alias para algoritmos
 \newcommand{\Complexity}[1]{\textbf{Complejidad}: #1}
 \newcommand{\Pre}[1]{\textbf{Pre} $\equiv$ \{#1\}}
+
+% Alias para símbolos
+\newcommand{\N}{\mathbb{N}}
