--- a/Prácticas/Soluciones/Práctica1/ej3.tex
+++ b/Prácticas/Soluciones/Práctica1/ej3.tex
@@ -1,3 +1,85 @@
 \section*{Ejercicio 3}
 
-Pendiente
+\subsection*{a)}
+
+Demostración por inducción estructural. Primero probamos que todas las funciones iniciales cumplen la propiedad.
+
+\begin{itemize}
+    \item Función nula
+
+    $f(x) = n(x) = 0$. La función nula cae en el caso $f(x) = k$ donde $k = 0$.
+
+    \item Función sucesor
+
+    $f(x) = s(x) = x + 1$. La función sucesor cae en el caso $f(x) = x + k$ donde $k = 1$.
+
+    \item Función proyector
+
+    $f(x_1, \dots, x_n) = u^n_i(x_1, \dots, x_n) = x_i$. La función proyector cae en el caso $f(x_1, \dots, x_n) = x_i + k$ donde $k = 0$.
+\end{itemize}
+
+Paso inductivo. Supongamos que existe $h_m \in \mathcal{C}_c$ generada a partir de $m$ composiciones, tal que $h_m(x_1, \dots, x_n) = k$ o bien $h_m(x_1, \dots, x_n) = x_i + k$. Queremos ver si cualquier $h_{m+1} \in \mathcal{C}_c$ también cumple la propiedad. Para generar $h_{m+1}$ componemos $h_m$ con alguna función $f \in \mathcal{C}_c$.
+
+\begin{itemize}
+    \item Caso $f(x) = n(x)$
+
+    $h_{m+1} = f(h_m(x_1, \dots, x_n)) = n(h_m(x_1, \dots, x_n)) = 0$.
+
+    No importa la forma de $h_m$ pues $n(x) = 0$ para cualquier $x$.
+
+    \item Caso $f(x) = s(x)$
+
+    \begin{itemize}
+        \item Caso $h_m(x_1, \dots, x_n) = x_i + q$
+
+        $h_{m+1} = f(h_m(x_1, \dots, x_n)) = s(x_i + q) = x_i + q + 1 = x_i + k$ donde $k = q + 1$.
+
+        \item Caso $h_m(x_1, \dots, x_n) = q$
+
+        $h_{m+1} = f(h_m(x_1, \dots, x_n)) = s(q) = q + 1 = k$ donde $k = q + 1$.
+    \end{itemize}
+
+    \item Caso $f(x) = u^n_i(x)$
+
+    Como $h_m: \N^n \to \N$, necesariamente $f(x) = u^1_1(x)$ para poder componer $f \circ h_m$.
+
+    \begin{itemize}
+        \item Caso $h_m(x_1, \dots, x_n) = x_i + k$
+
+        $h_{m+1} = f(h_m(x_1, \dots, x_n)) = u^1_1(x_i + k) = x_i + k$.
+
+        \item Caso $h_m(x_1, \dots, x_n) = k$
+
+        $h_{m+1} = f(h_m(x_1, \dots, x_n)) = u^1_1(k) = k$.
+    \end{itemize}
+
+    \item Caso $f(x) = x + r$
+
+    \begin{itemize}
+        \item Caso $h_m(x_1, \dots, x_n) = x_i + q$
+
+        $h_{m+1} = f(h_m(x_1, \dots, x_n)) = x_i + q + r = x_i + k$ donde $k = q + r$.
+
+        \item Caso $h_m(x_1, \dots, x_n) = q$
+
+        $h_{m+1} = f(h_m(x_1, \dots, x_n)) = q + r = k$ donde $k = q + r$.
+    \end{itemize}
+
+    \item Caso $f(x) = k$
+
+    \begin{itemize}
+        \item Caso $h_m(x_1, \dots, x_n) = x_i + q$
+
+        $h_{m+1} = f(h_m(x_1, \dots, x_n)) = f(x_i + q) = k$.
+
+        \item Caso $h_m(x_1, \dots, x_n) = q$
+
+        $h_{m+1} = f(h_m(x_1, \dots, x_n)) = f(q) = k$.
+    \end{itemize}
+\end{itemize}
+
+Por lo tanto, partiendo de una función $h_m \in \mathcal{C}_c$, vemos que al realizar una composición con alguna función $f \in \mathcal{C}_c$ obtenemos una función $h_{m+1} \in \mathcal{C}_c$ (pues $\mathcal{C}_c$ es cerrado por composición) que mantiene la propiedad enunciada.
+
+\subsection*{b)}
+
+En el ejercicio 2 vimos que la función $suma(x, y) = x + y$ es P.R. pero $suma \notin \mathcal{C}_c$ pues no cumple con la propiedad.
