--- a/Template.tex
+++ b/Template.tex
@@ -66,6 +66,7 @@
 \newcommand{\oLuego}{\opsub{\lor}{\scriptscriptstyle{L}}}
 \newcommand{\implicaLuego}{\opsub{\implies}{\scriptscriptstyle{L}}}
 \renewcommand{\implies}{\Rightarrow}
+\renewcommand{\impliedby}{\Leftarrow}
 
 % Columna "x" tiene fondo amarillo
 \usepackage{colortbl}
