--- a/Prácticas/Soluciones/Práctica1/ej3.tex
+++ b/Prácticas/Soluciones/Práctica1/ej3.tex
@@ -18,7 +18,7 @@ Para la ida $(\implies)$ hacemos una demostración por inducción estructural. P
     $f(x_1, \dots, x_n) = u^n_i(x_1, \dots, x_n) = x_i$. La función proyector cae en el caso $f(x_1, \dots, x_n) = x_i + k$ donde $k = 0$.
 \end{itemize}
 
-Paso inductivo. Supongamos que existe $h_m \in \mathcal{C}_c$ generada a partir de $m$ composiciones, tal que $h_m(x_1, \dots, x_n) = k$ o bien $h_m(x_1, \dots, x_n) = x_i + k$. Queremos ver si cualquier $h_{m+1} \in \mathcal{C}_c$ también cumple la propiedad. Para generar $h_{m+1}$ componemos $h_m$ con alguna función $f \in \mathcal{C}_c$.
+Paso inductivo. Supongamos que existe $h_m \in \C_c$ generada a partir de $m$ composiciones, tal que $h_m(x_1, \dots, x_n) = k$ o bien $h_m(x_1, \dots, x_n) = x_i + k$. Queremos ver si cualquier $h_{m+1} \in \C_c$ también cumple la propiedad. Para generar $h_{m+1}$ componemos $h_m$ con alguna función $f \in \C_c$.
 
 \begin{itemize}
     \item Caso $f(x) = n(x)$
@@ -78,9 +78,9 @@ Paso inductivo. Supongamos que existe $h_m \in \mathcal{C}_c$ generada a partir 
     \end{itemize}
 \end{itemize}
 
-Por lo tanto, partiendo de una función $h_m \in \mathcal{C}_c$, vemos que al realizar una composición con alguna función $f \in \mathcal{C}_c$ obtenemos una función $h_{m+1} \in \mathcal{C}_c$ (pues $\mathcal{C}_c$ es cerrado por composición) que mantiene la propiedad enunciada.
+Por lo tanto, partiendo de una función $h_m \in \C_c$, vemos que al realizar una composición con alguna función $f \in \C_c$ obtenemos una función $h_{m+1} \in \C_c$ (pues $\C_c$ es cerrado por composición) que mantiene la propiedad enunciada.
 
-Para la vuelta $(\impliedby)$ mostramos que podemos construir cualquier $f(x_1, \dots, x_n) = k$ o $f(x_1, \dots, x_n) = x_i + k$ a partir de composición de las funciones iniciales, y por lo tanto $f \in \mathcal{C}_c$.
+Para la vuelta $(\impliedby)$ mostramos que podemos construir cualquier $f(x_1, \dots, x_n) = k$ o $f(x_1, \dots, x_n) = x_i + k$ a partir de composición de las funciones iniciales, y por lo tanto $f \in \C_c$.
 
 \begin{itemize}
     \item $f(x_1, \dots, x_n) = k = s^k(n(x_1, \dots, x_n))$
@@ -89,4 +89,4 @@ Para la vuelta $(\impliedby)$ mostramos que podemos construir cualquier $f(x_1, 
 
 \subsection*{b)}
 
-En el ejercicio 2 vimos que la función $suma(x, y) = x + y$ es P.R. pero $suma \notin \mathcal{C}_c$ pues no cumple con la propiedad.
+En el ejercicio 2 vimos que la función $\text{suma}(x, y) = x + y$ es P.R. pero $\text{suma} \notin \C_c$ pues no cumple con la propiedad.
