--- a/Template.tex
+++ b/Template.tex
@@ -5,6 +5,7 @@
 % \usepackage{noto-mono} % Tipografía "Noto Sans Mono" para monospace
 \usepackage{mathtools, amsmath, amsbsy, amssymb, mathabx} % Agregar cuando se necesiten: amscd, amssymb, amsthm, latexsym
 \usepackage{enumerate}
+\usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{multicol}
 \usepackage{svg}
@@ -23,6 +24,7 @@
 \setlength{\belowdisplayskip}{1em}
 \setlength{\abovedisplayshortskip}{1em}
 \setlength{\belowdisplayshortskip}{1em}
+\setlist[itemize]{itemsep=0.5em,topsep=0em}
 
 % Numeración de las secciones y el índice
 \setcounter{tocdepth}{1}
@@ -84,3 +86,4 @@
 
 % Alias para símbolos
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\C}{\mathcal{C}}
