--- a/Template.tex
+++ b/Template.tex
@@ -88,3 +88,4 @@
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\C}{\mathcal{C}}
 \newcommand{\x}{\overline{x}}
+\newcommand{\tupla}[2]{\langle #1, #2 \rangle}
