--- a/Prácticas/Soluciones/Práctica1/ej10.tex
+++ b/Prácticas/Soluciones/Práctica1/ej10.tex
@@ -19,6 +19,6 @@ Esta definición difiere del esquema de recursión primitiva por 2 razones: tene
     \item $g(n + 1) = \tupla{r(g(n))}{l(g(n)) + r(g(n))}$
 \end{itemize}
 
-La función $g$ es P.R. pues sigue el esquema de recursión primitiva y es composición de funciones P.R.
+La función $g$ es p.r. pues sigue el esquema de recursión primitiva y es composición de funciones p.r.
 
-Finalmente, podemos redefinir $f$ en función de $g$ de la siguiente forma: $f(n) = l(g(n))$. Por lo tanto, $f$ es P.R. y consecuentemente pertenece a cualquier clase PRC.
+Finalmente, podemos redefinir $f$ en función de $g$ de la siguiente forma: $f(n) = l(g(n))$. Por lo tanto, $f$ es p.r. y consecuentemente pertenece a cualquier clase PRC.
