--- a/Prácticas/Soluciones/Práctica1/ej3.tex
+++ b/Prácticas/Soluciones/Práctica1/ej3.tex
@@ -46,4 +46,4 @@ Para la vuelta $(\impliedby)$ mostramos que podemos construir cualquier $f(x_1, 
 
 \subsection*{b)}
 
-En el ejercicio 2 vimos que la función $\text{suma}(x, y) = x + y$ es P.R. pero $\text{suma} \notin \C_c$ pues no cumple con la propiedad.
+En el ejercicio 2 vimos que la función $\text{suma}(x, y) = x + y$ es p.r. pero $\text{suma} \notin \C_c$ pues no cumple con la propiedad.
