--- a/Prácticas/Soluciones/Práctica1/ej9.tex
+++ b/Prácticas/Soluciones/Práctica1/ej9.tex
@@ -1,6 +1,6 @@
 \section*{Ejercicio 9}
 
-Sea $\tupla{x}{y} = 2^x (2y + 1) \dotdiv 1$ la codificación de pares de naturales. Esta función es P.R. pues es una composición de otras funciones P.R. como la potencia, multiplicación y suma.
+Sea $\tupla{x}{y} = 2^x (2y + 1) \dotdiv 1$ la codificación de pares de naturales. Esta función es p.r. pues es una composición de otras funciones p.r. como la potencia, multiplicación y suma.
 
 Esta codificación es una biyección, pues hay una única solución $(x, y)$ a la ecuación $z = \tupla{x}{y}$. Notemos que para garantizar esto es necesario restar $1$ en la codificación, pues sino el par $\tupla{0}{0} = 1$ y luego sucedería que $\tupla{x}{y} \geq 1 \; \forall x,y \in \N$.
 
@@ -20,4 +20,4 @@ Definimos los observadores $l$ (left) y $r$ (right) del par $z = \tupla{x}{y}$ t
     \item $r(z) = \text{min}_{y \leq z} \; ((\exists x)_{\leq z} \; z = \tupla{x}{y})$
 \end{itemize}
 
-Como la codificación de pares y los observadores son P.R. podemos concluir que toda clase PRC los contiene.
+Como la codificación de pares y los observadores son p.r. podemos concluir que toda clase PRC los contiene.
